--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
