--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,11 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "leaflet": "^1.7.1",
+    "leaflet-draw": "^1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.1.0",
+    "react-leaflet-draw": "^0.19.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.2",
